# shfast2

./: Cargo.toml  build.rs
schema/: bidask.py  common.proto  kline.proto  snapshot.fbs  snapshot.proto
src/: decimal.rs  main.rs  parser.rs
src/ftcodec/: common.rs  kline.rs  mod.rs  snapshot.rs
